--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -496,11 +496,11 @@
 
     .box1 {
       .header {
-        padding-top: 6px;
-        padding-bottom: 4px;
-        @media all and (max-width: @screen-xs) {
+        // padding-top: 6px;
+        // padding-bottom: 4px;
+        //@media all and (max-width: @screen-xs) {
           padding: 8px 18px 8px 10px;
-        }
+        //}
       }
 
       .text {
