--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -21,12 +21,12 @@
   table {
     border: 1px dotted @table-border-color;
 
-    > tfoot,
+    > tbody,
      > thead,
-    > tbody {
+    > tfoot {
       > tr {
-        > th,
-        > td {
+        > td,
+        > th {
           border: 1px dotted @table-border-color;
         }
       }
@@ -116,22 +116,20 @@ body {
       display: block;
       margin: 5px 0;
 
-      &:not(:focus) {
-        &::before {
-          content: 'Klik her, og derefter p\00e5 \00a0 ikonet i v\00e6rkt\00f8jslinjen for at tilf\00f8je et nyt accordion:';
-          color: @gray-light;
-          vertical-align: middle;
+      &::before {
+        content: 'Klik her, og derefter p\00e5 \00a0 ikonet i v\00e6rkt\00f8jslinjen for at tilf\00f8je et nyt accordion:';
+        color: @gray-light;
+        vertical-align: middle;
 
-          html:lang(en) & {
-            content: 'Place cursor here and click the icon in the toolbar to add a new accordion:';
-          }
+        html:lang(en) & {
+          content: 'Place cursor here and click the icon in the toolbar to add a new accordion:';
         }
+      }
 
-        &::after {
-          font-family: "Glyphicons Halflings";
-          content: "\e236";
-          vertical-align: middle;
-        }
+      &::after {
+        font-family: "Glyphicons Halflings";
+        content: "\e236";
+        vertical-align: middle;
       }
       // - but hide sibsequent cursor blocks
       + .accordion-hidden {
