--- a/less/panels.less
+++ b/less/panels.less
@@ -374,6 +374,11 @@
 .panel-accordion {
   border: 1px solid @panel-accordion-border;
 
+  &:focus {
+    color: @link-hover-color;
+    .tab-focus();
+  }
+
   & > .panel-heading {
     background-color: @panel-accordion-heading-bg;
     padding: 0 30px 0 0;
