--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -132,11 +132,6 @@
   }
 }
 
-// .slick-active {
-//   &:focus-visible {
-//     .tab-focus();
-//   }
-// }
 @media all and (min-width: @screen-sm) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   /* IE 11 */
   .slick-slide img {
@@ -197,9 +192,12 @@
   cursor: pointer;
   color: transparent;
   border: none;
-  //outline: none;
+  outline: none;
   background: transparent;
 
+  &:focus {
+    .tab-focus();
+  }
   &:focus,
   &:hover {
 
@@ -233,12 +231,14 @@
   padding: 0;
   cursor: pointer;
   color: @white-color;
-  //outline: none;
+  outline: none;
   background: transparent;
   opacity: 0.45;
   border: none;
   background: transparent;
-
+  &:focus {
+    .tab-focus();
+  }
   &:focus,
   &:hover {
     opacity: 1;
@@ -246,6 +246,9 @@
 }
 
 .slick-slider {
+  &:focus {
+    .tab-focus();
+  }
   &:hover {
     .slick-prev {
       left: -3px;
