Flexible box color

--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -563,9 +563,9 @@
       &.with-img {
         border: 0!important;
 
-        &::before {
-          color: @white-color;
-        }
+        // &::before {
+        //   color: @white-color;
+        // }
 
         &.subcolor_5 {
           &::before {
