Flexible box color

--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -567,11 +567,11 @@
         //   color: @white-color;
         // }
 
-        &.subcolor_5 {
-          &::before {
-            color: @gray-dark;
-          }
-        }
+        // &.subcolor_5 {
+        //   &::before {
+        //     color: @gray-dark;
+        //   }
+        // }
 
         &.subcolor_6 {
           &::before {
