--- a/less/variables.less
+++ b/less/variables.less
@@ -168,6 +168,9 @@
 //** Global text color on `<body>`.
 @text-color:            @gray-dark;
 
+//** Global tab outline color.
+@outline-color:     #106Bfe;
+
 //** Global textual link color.
 @link-color:            #165aad;
 //** Link hover color set via `darken()` function.
