Fix for arrow color

--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -888,7 +888,7 @@
       &.size2,
       &.size3 {
         &.outlined.with-img {
-          &.subcolor_6 {
+          &.subcolor_5, &.subcolor_6 {
             &::before {
               color: @gray-dark;
             }
