Text ellipsis in inputs

--- a/docs/assets/css/doctypes/medarbejderoversigt.css
+++ b/docs/assets/css/doctypes/medarbejderoversigt.css
@@ -46,6 +46,10 @@
   width: 20% !important;
 }
 
+#medarbejdertable tr th input:placeholder-shown {
+  text-overflow: ellipsis;
+}
+
 #forskerprofil_kontaktoplysninger>img {
   float: right;
   margin-bottom: 10px;
