--- a/docs/assets/css/datatables/datatables.css
+++ b/docs/assets/css/datatables/datatables.css
@@ -42,6 +42,11 @@
   /*border-collapse: separate !important;*/
 }
 
+.dataTable th:focus, .dataTable td:focus {
+  outline: 2px solid #106bfe;
+  outline-offset: -2px;
+}
+
 .dataTable>tbody>tr:hover {
   background-color: #f5f5f5;
 }
@@ -58,11 +63,6 @@
 
 .dataTable.nowrap th, .dataTable.nowrap td {
   white-space: nowrap;
-}
-
-.dataTable.nowrap th:focus, .dataTable.nowrap td:focus {
-  outline: 2px solid #106bfe;
-  outline-offset: -2px;
 }
 
 .dataTables_wrapper .dataTables_length label {
