--- a/less/panels.less
+++ b/less/panels.less
@@ -391,15 +391,17 @@
         display: block;
         padding: 8px 0 10px 10px;
         outline: none;
-        &:focus:not(:focus-visible) {
-          // Hide default focus outline
-          outline: none;
-        }
-
-        &:focus-visible {
-          // Use keyboard focus
+        &:focus {
           .tab-focus();
         }
+        // &:focus:not(:focus-visible) {
+        //   outline: none;
+        // }
+
+        // &:focus-visible {
+        //   // Use keyboard focus
+        //   .tab-focus();
+        // }
 
         &:before {
           .glyphicon;
