--- a/less/variables.less
+++ b/less/variables.less
@@ -169,7 +169,7 @@
 @text-color:            @gray-dark;
 
 //** Global tab outline color.
-@outline-color:     #106Bfe;
+@outline-color:     #333;
 
 //** Global textual link color.
 @link-color:            #165aad;
