--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -5,11 +5,11 @@
   position: relative;
 
   .ku-branding-logo {
-    .logo-img {
-      .img-responsive;
-      // fix for IE 8-10 since svgs are disproportionately sized
-      width: 100% \9;
-    }
+    // .logo-img {
+    //   .img-responsive;
+    //   // fix for IE 8-10 since svgs are disproportionately sized
+    //   width: 100% \9;
+    // }
     height: 83px;
     width: 61px;
     z-index: 10;
@@ -20,6 +20,10 @@
       width: 50px;
       bottom: -20px;
       left: 5px;
+    }
+
+    & > a {
+      display: block;
     }
   }
 
