--- a/less/faculties/faelles.less
+++ b/less/faculties/faelles.less
@@ -18,6 +18,12 @@ h2 {
   }
 }
 
+// Hide chatbot on mobile
+@media all and (max-width: @screen-xs-max) {
+  #botxo-chat {display: none}
+}
+
+
 .gridbox {
   &.faculty_color {
     background: @ku-red;
