--- a/less/faculties/faelles.less
+++ b/less/faculties/faelles.less
@@ -17,12 +17,12 @@ h2 {
     background: #ae1b65 !important;
   }
 }
-
 // Hide chatbot on mobile
 @media all and (max-width: @screen-xs-max) {
-  #botxo-chat {display: none}
+  #botxo-chat {
+    display: none;
+  }
 }
-
 
 .gridbox {
   &.faculty_color {
