Buttons in docs

--- a/docs/_includes/css/buttons.html
+++ b/docs/_includes/css/buttons.html
@@ -167,12 +167,12 @@
   <h3>Button element</h3>
   <p>Add the <code>disabled</code> attribute to <code>&lt;button&gt;</code> buttons.</p>
   <p class="bs-example" data-example-id="disabled-button-btns">
-    <button type="button" class="btn btn-primary btn-lg" disabled="disabled">Primary button</button>
-    <button type="button" class="btn btn-default btn-lg" disabled="disabled">Button</button>
+    <button type="button" class="btn btn-primary" disabled="disabled">Primary button</button>
+    <button type="button" class="btn btn-default" disabled="disabled">Button</button>
   </p>
 {% highlight html %}
-<button type="button" class="btn btn-lg btn-primary" disabled="disabled">Primary button</button>
-<button type="button" class="btn btn-default btn-lg" disabled="disabled">Button</button>
+<button type="button" class="btn btn-primary" disabled="disabled">Primary button</button>
+<button type="button" class="btn btn-default" disabled="disabled">Button</button>
 {% endhighlight %}
 
   <div class="bs-callout bs-callout-danger" id="callout-buttons-ie-disabled">
@@ -183,12 +183,12 @@
   <h3>Anchor element</h3>
   <p>Add the <code>.disabled</code> class to <code>&lt;a&gt;</code> buttons.</p>
   <p class="bs-example" data-example-id="disabled-anchor-btns">
-    <a href="#" class="btn btn-primary btn-lg disabled" role="button">Primary link</a>
-    <a href="#" class="btn btn-default btn-lg disabled" role="button">Link</a>
+    <a href="#" class="btn btn-primary disabled" role="button">Primary link</a>
+    <a href="#" class="btn btn-default disabled" role="button">Link</a>
   </p>
 {% highlight html %}
-<a href="#" class="btn btn-primary btn-lg disabled" role="button">Primary link</a>
-<a href="#" class="btn btn-default btn-lg disabled" role="button">Link</a>
+<a href="#" class="btn btn-primary disabled" role="button">Primary link</a>
+<a href="#" class="btn btn-default disabled" role="button">Link</a>
 {% endhighlight %}
   <p>
     We use <code>.disabled</code> as a utility class here, similar to the common <code>.active</code> class, so no prefix is required.
