--- a/docs/_includes/css/buttons.html
+++ b/docs/_includes/css/buttons.html
@@ -141,23 +141,23 @@
   <h3>Button element</h3>
   <p>No need to add <code>:active</code> as it's a pseudo-class, but if you need to force the same appearance, go ahead and add <code>.active</code>.</p>
   <p class="bs-example" data-example-id="active-button-btns">
-    <button type="button" class="btn btn-primary btn-lg active">Primary button</button>
-    <button type="button" class="btn btn-default btn-lg active">Button</button>
+    <button type="button" class="btn btn-primary active">Primary button</button>
+    <button type="button" class="btn btn-default active">Button</button>
   </p>
 {% highlight html %}
-<button type="button" class="btn btn-primary btn-lg active">Primary button</button>
-<button type="button" class="btn btn-default btn-lg active">Button</button>
+<button type="button" class="btn btn-primary active">Primary button</button>
+<button type="button" class="btn btn-default active">Button</button>
 {% endhighlight %}
 
   <h3>Anchor element</h3>
   <p>Add the <code>.active</code> class to <code>&lt;a&gt;</code> buttons.</p>
   <p class="bs-example" data-example-id="active-anchor-btns">
-    <a href="#" class="btn btn-primary btn-lg active" role="button">Primary link</a>
-    <a href="#" class="btn btn-default btn-lg active" role="button">Link</a>
+    <a href="#" class="btn btn-primary active" role="button">Primary link</a>
+    <a href="#" class="btn btn-default active" role="button">Link</a>
   </p>
 {% highlight html %}
-<a href="#" class="btn btn-primary btn-lg active" role="button">Primary link</a>
-<a href="#" class="btn btn-default btn-lg active" role="button">Link</a>
+<a href="#" class="btn btn-primary active" role="button">Primary link</a>
+<a href="#" class="btn btn-default active" role="button">Link</a>
 {% endhighlight %}
 
 
