--- a/docs/_includes/ku-branding.html
+++ b/docs/_includes/ku-branding.html
@@ -3,7 +3,7 @@
     <div class="col-sm-7 ku-branding-line">
       <div class="ku-branding-logo">
         <a title="Forsiden af ku.dk" href="/">
-          <img class="logo-img" src="https://bootstrap.secure.ku.dk/img/faelles.svg" alt="Københavns Universitet">
+          <img class="img-responsive" src="https://bootstrap.secure.ku.dk/img/faelles.svg" alt="Københavns Universitet">
         </a>
       </div>
       <div class="ku-branding-text">
