--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -28,6 +28,10 @@
 
     & > a {
       display: block;
+      @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+        // Override for IE11
+        display: inline;
+      }
     }
   }
 
