--- a/less/ku-legacy.less
+++ b/less/ku-legacy.less
@@ -51,7 +51,8 @@ ul {
   border-style: solid;
   border-width: 0 0 1px 0;
   line-height: 1.5;
-  margin: 0 1px 0 0;
+  font-size: 12px;
+  margin: 0;
   padding: 0;
   width: 100%;
 
@@ -70,7 +71,7 @@ ul {
     border-style: solid;
     border-width: 1px 1px 0 0;
     margin: 0;
-    padding: 10px 8px 10px 12px;
+    padding: 10px 6px 10px 6px;
     vertical-align: top;
 
     &.udd_table_td_bgcolor {
