--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -103,7 +103,7 @@ html:lang(en) .ku-branding-text {
   }
 
   .jumpboard .jumpcolumn {
-    padding: 0 30px 13px 30px;
+    padding: 0;
     margin: 0;
   }
 
