--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -1257,7 +1257,7 @@
     }
   }
 }
-@media all and (min-width: @screen-xs-max) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+@media all and (max-width: @screen-xs-max) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   .gridbox.with-img {
     &.size1 {
       .box2 img {
