--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -113,6 +113,10 @@
       input[type="text"] {
         opacity: 0.85;
         border: 0;
+
+        &:placeholder-shown {
+          text-overflow: ellipsis;
+        }
       }
 
       .input-group-btn {
