--- a/docs/assets/css/doctypes/publikationsliste.css
+++ b/docs/assets/css/doctypes/publikationsliste.css
@@ -170,7 +170,7 @@ div.rendering p.type, ol.portal_list>li {
 .view_container ul.tabs {
   height: auto;
   width: 100%;
-  float: left;
+  overflow: hidden;
   clear: both;
   margin: 20px 0;
   border-bottom: 1px solid #ccc;
