Slider focus style

--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -335,7 +335,9 @@
 
   .slick-active {
     background: rgba(@gray-base, 0.5);
-    outline: none;
+    &:focus-within {
+      .tab-focus();
+    }
   }
 }
 // Captions - KU specific
