--- a/less/panels.less
+++ b/less/panels.less
@@ -393,6 +393,9 @@
       a {
         display: block;
         padding: 8px 0 10px 10px;
+        &:focus {
+          outline: none;
+        }
 
         &:before {
           .glyphicon;
