--- a/less/progress-bars.less
+++ b/less/progress-bars.less
@@ -1,28 +1,32 @@
 //
 // Progress bars
 // --------------------------------------------------
-
-
 // Bar animations
 // -------------------------
-
 // WebKit
 @-webkit-keyframes progress-bar-stripes {
-  from  { background-position: 40px 0; }
-  to    { background-position: 0 0; }
-}
+  from {
+    background-position: 40px 0;
+  }
 
+  to {
+    background-position: 0 0;
+  }
+}
 // Spec and IE10+
 @keyframes progress-bar-stripes {
-  from  { background-position: 40px 0; }
-  to    { background-position: 0 0; }
+  from {
+    background-position: 40px 0;
+  }
+
+  to {
+    background-position: 0 0;
+  }
 }
-
-
 // Bar itself
 // -------------------------
-
 // Outer container
+
 .progress {
   overflow: hidden;
   height: @line-height-computed;
@@ -31,11 +35,11 @@
   border-radius: @progress-border-radius;
   .box-shadow(inset 0 1px 2px rgba(0,0,0,.1));
 }
-
 // Bar of progress
+
 .progress-bar {
   float: left;
-  width: 0%;
+  width: 0;
   height: 100%;
   font-size: @font-size-small;
   line-height: @line-height-computed;
@@ -45,21 +49,17 @@
   .box-shadow(inset 0 -1px 0 rgba(0,0,0,.15));
   .transition(width .5s ease);
 }
-
 // Striped bars
 //
 // .progress-bar-striped {
 //   #gradient > .striped();
 //   background-size: 40px 40px;
 // }
-
 // Call animation for the active one
 //
 // .progress-bar.active {
 //   .animation(progress-bar-stripes 2s linear infinite);
 // }
-
-
 // Variations
 // -------------------------
 
@@ -77,4 +77,15 @@
 
 .progress-bar-danger {
   .progress-bar-variant(@progress-bar-danger-bg);
+}
+// KU specific:
+.progress {
+  position: relative;
+}
+
+.progress-track {
+  position: absolute;
+  display: block;
+  width: 100%;
+  color: @text-color;
 }
