--- a/docs/assets/css/doctypes/searchPage.css
+++ b/docs/assets/css/doctypes/searchPage.css
@@ -1,7 +1,8 @@
 /* SearchPage docType */
 .custom-search {
   width: 400px;
-  padding: 15px 0
+  padding: 15px 26px;
+  margin: 0 auto;
 }
 
 .custom-search .input-group .input-group-addon {
