Calendar marked days

--- a/less/ku-datetimepicker.less
+++ b/less/ku-datetimepicker.less
@@ -2,8 +2,8 @@
 * Bootstrap datepicker
 */
 // KU calendar code-color
-@ku-occupied-color: #88a6a6;
-@ku-occupied-color-hover: #7f9a9a;
+@ku-occupied-color: @brand-info;
+@ku-occupied-color-hover: darken(@brand-info, 5%);
 
 .datepicker {
   border-radius: @border-radius-base;
