--- a/less/navbar.less
+++ b/less/navbar.less
@@ -676,6 +676,9 @@
         text-decoration: @link-hover-decoration;
         //background-color: @navbar-inverse-link-hover-bg;
       }
+      &:focus {
+        outline: 1px dotted @outline-color2;
+      }
       // KU language switcher icons
       &.dansk,
       &.english {
