--- a/less/variables.less
+++ b/less/variables.less
@@ -169,6 +169,7 @@
 @text-color:            @gray-dark;
 
 //** Global tab outline color.
+@outline-color2:    #106Bfe;
 @outline-color:     @gray-base;
 
 //** Global textual link color.
