--- a/less/mixins/tab-focus.less
+++ b/less/mixins/tab-focus.less
@@ -14,3 +14,8 @@
   // transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
   // border-radius: 2px;
 }
+
+.tab-focus-v2() {
+  // Preferably used for dark backgrounds such as global menus and footer.
+  outline: 1px solid @outline-color2;
+}
