--- a/less/navbar.less
+++ b/less/navbar.less
@@ -647,7 +647,7 @@
   // KU specific:
   a {
     &:focus {
-      outline: 1px dotted @outline-color2;
+      .tab-focus-v2();
     }
   }
   background-color: @navbar-inverse-bg;
