--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -133,7 +133,7 @@
         }
 
         &:focus {
-          outline: 1px dotted @outline-color2;
+          .tab-focus-v2();
           color: #e2e2e2;
         }
       }
