Changed slideshow class

--- a/less/faculties/faelles.less
+++ b/less/faculties/faelles.less
@@ -314,7 +314,7 @@ h2 {
 }
 // Slick slider colors
 
-.slideshow {
+.slick-slide {
   .faculty_color {
     background: @ku-red;
     color: @white-color;
