--- a/less/faculties/hum.less
+++ b/less/faculties/hum.less
@@ -298,7 +298,7 @@ h2 {
   }
 }
 // Slick slider colors
-.slideshow {
+.slick-slide {
   .faculty_color {
     background: @hum;
     color: @white-color;
