--- a/less/faculties/jur.less
+++ b/less/faculties/jur.less
@@ -302,7 +302,7 @@ h2 {
   }
 }
 // Slick slider colors
-.slideshow {
+.slick-slide {
   .faculty_color {
     background: @jura;
     color: @white-color;
