--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -311,3 +311,17 @@ form.gdpr-accept {
     }
   }
 }
+
+.image-presentation {
+  // Element for static images with text overlay just like slick slider - just not sliding:
+  .slick-slide {
+    display: block;
+    float: none;
+    clear: both;
+
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+  }
+}
