--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -85,6 +85,21 @@
   }
 }
 
+//KU remove gutter from columns
+.no-gutter {
+  > [class*='col-'] {
+    padding-right: 0;
+    padding-left: 0;
+  }
+}
+
+@media (max-width: @screen-sm-max) {
+  // Margin top for mobile and tablets
+  .mobile-margin-top-10 {
+    margin-top: @margin10;
+  }
+}
+
 .relative {
   position: relative;
 }
@@ -152,7 +167,6 @@
   height: 3rem;
   animation: ku-loading 0.75s infinite linear;
 }
-
 // .ku-dots-loading {
 //   position: relative;
 //   margin-left: 10px;
