--- a/less/ku-entries.less
+++ b/less/ku-entries.less
@@ -155,6 +155,10 @@
           }
         }
       }
+      &.with-form {
+        padding-top: 6px;
+        padding-bottom: 6px;
+      }
     }
   }
 }
