--- a/less/ku-entries.less
+++ b/less/ku-entries.less
@@ -156,8 +156,10 @@
         }
       }
       &.with-form {
-        padding-top: 6px;
-        padding-bottom: 8px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0;
       }
     }
   }
