--- a/less/ku-entries.less
+++ b/less/ku-entries.less
@@ -156,10 +156,8 @@
         }
       }
       &.with-form {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 0;
+        padding-top: 6px;
+        padding-bottom: 7px;
       }
     }
   }
