--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -55,6 +55,14 @@ html:lang(en) .ku-branding-text {
   }
 }
 
+@media all and (min-width: 992px) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+
+  /* IE11 only */
+  .ku-branding-text {
+    background-position: left bottom -10px;
+  }
+}
+
 .breadcrumbs, .local-footer {
   display: none;
 }
