--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -41,9 +41,8 @@
     display: flex;
     flex-direction: row;
   }
-
-  .jump,
-  .jumpbox {
+  // Accessibility navigation box for tabbing
+  .jump {
     position: absolute;
     top: 0;
     left: 0;
@@ -84,15 +83,14 @@
     display: none;
   }
 }
-
 //KU remove gutter from columns
+
 .no-gutter {
   > [class*='col-'] {
     padding-right: 0;
     padding-left: 0;
   }
 }
-
 @media (max-width: @screen-sm-max) {
   // Margin top for mobile and tablets
   .mobile-margin-top-10 {
@@ -244,29 +242,29 @@
     color: inherit;
   }
 }
-@keyframes ku-ken-burns {
-  0% {
-    transform: scale3d(1, 1, 1) translate3d(0, 0, 0) translateZ(0);
-  }
-
-  100% {
-    transform: scale3d(1.5, 1.5, 1.5) translate3d(-12.5%, -12.5%, 0) translateZ(0);
-  }
-}
-
-.ku-ken-burns-container {
-  position: relative;
-  overflow: hidden;
-
-  img {
-    &.with-animation {
-      backface-visibility: hidden;
-      will-change: transform, opacity;
-      transform-style: preserve-3d;
-      animation: 20s ease-out forwards ku-ken-burns;
-    }
-  }
-}
+// @keyframes ku-ken-burns {
+//   0% {
+//     transform: scale3d(1, 1, 1) translate3d(0, 0, 0) translateZ(0);
+//   }
+//
+//   100% {
+//     transform: scale3d(1.5, 1.5, 1.5) translate3d(-12.5%, -12.5%, 0) translateZ(0);
+//   }
+// }
+//
+// .ku-ken-burns-container {
+//   position: relative;
+//   overflow: hidden;
+//
+//   img {
+//     &.with-animation {
+//       backface-visibility: hidden;
+//       will-change: transform, opacity;
+//       transform-style: preserve-3d;
+//       animation: 20s ease-out forwards ku-ken-burns;
+//     }
+//   }
+// }
 
 iframe {
   border: 0;
