Custom search field dropdown

--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -325,3 +325,20 @@ form.gdpr-accept {
     }
   }
 }
+
+.custom-search {
+  // Custom search dropdown
+  width: 400px;
+  padding: 15px 26px;
+  margin: 0 auto;
+
+  .media {
+    border-bottom: 1px solid @gray;
+  }
+
+  .input-group {
+    .input-group-addon {
+      cursor: pointer;
+    }
+  }
+}
