--- a/docs/_includes/css/type.html
+++ b/docs/_includes/css/type.html
@@ -248,7 +248,7 @@ You can use the mark tag to <mark>highlight</mark> text.
       <strong>Twitter, Inc.</strong><br>
       1355 Market Street, Suite 900<br>
       San Francisco, CA 94103<br>
-      <abbr title="Phone">P:</abbr> (123) 456-7890
+      <abbr title="Phone">P:</abbr> <a href="tel:1234567890">(123) 456-7890</a>
     </address>
     <address>
       <strong>Full Name</strong><br>
@@ -260,7 +260,7 @@ You can use the mark tag to <mark>highlight</mark> text.
   <strong>Twitter, Inc.</strong><br>
   1355 Market Street, Suite 900<br>
   San Francisco, CA 94103<br>
-  <abbr title="Phone">P:</abbr> (123) 456-7890
+  <abbr title="Phone">P:</abbr> <a href="tel:1234567890">(123) 456-7890</a>
 </address>
 
 <address>
