--- a/docs/assets/css/social-feeds/twitter.css
+++ b/docs/assets/css/social-feeds/twitter.css
@@ -10,6 +10,10 @@
   border-top: 1px solid #ccc;
 }
 
+#twitter-feed li:last-child {
+  border-bottom: 1px solid #ccc;
+}
+
 #twitter-feed .description {
   float: none;
   clear: both;
