--- a/less/variables.less
+++ b/less/variables.less
@@ -134,10 +134,10 @@
 
 // Social media colors
 
-@ku-twitter:            #1da1f2;
+@ku-twitter:            #0b7bc1;
 @ku-facebook:           #4267b2;
 @ku-linkedin:           #0073b1;
-@ku-futurity:           #ffa64d;
+@ku-futurity:           #B85c00;
 @ku-conversation:       #d8352a;
 
 // Fact box colors:
