--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -328,7 +328,8 @@ form.gdpr-accept {
 
 .custom-search {
   // Custom search dropdown
-  width: 400px;
+  width: 100%;
+  max-width: 400px;
   padding: 15px 26px;
   margin: 0 auto;
 
