Custom search dropdown

--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -329,6 +329,7 @@ form.gdpr-accept {
 .custom-search {
   // Custom search dropdown
   width: 100%;
+  min-width: 250px;
   max-width: 400px;
   padding: 15px 26px;
   margin: 0 auto;
