GDPR form styling

--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -288,7 +288,7 @@
 // Newsletter and GDPR
 
 form.gdpr-accept {
-  margin-top: 10px;
+  margin: 10px 0 15px 0;
 
   label[for="email"] {
     margin-bottom: 5px;
