--- a/docs/assets/css/doctypes/publikationsliste.css
+++ b/docs/assets/css/doctypes/publikationsliste.css
@@ -245,6 +245,7 @@ table.properties>tbody>tr:hover {
 
 #purecontent .person_text h2.title a {
   color: inherit !important;
+  font-weight: 600 !important;
 }
 
 .rendering h2 {
